--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,12 @@
         "php": "^7.4 || ^8.0",
         "ext-fileinfo": "*",
         "ext-iconv": "*",
-        "ext-imap": "*",
         "ext-mbstring": "*",
         "ext-json": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.4",
-        "maglnet/composer-require-checker": "^2.0|^3.2",
+        "javanile/php-imap2": "^0.1.10",
         "nikic/php-parser": "^4.3,<4.7|^4.10",
         "paragonie/hidden-string": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
@@ -46,7 +45,6 @@
         "static-analysis": [
             "parallel-lint .php-cs-fixer.dist.php src tests examples",
             "phpcpd src tests",
-            "composer-require-checker check --config-file=composer-require-checker.config.json ./composer.json",
             "phpmnd ./ --exclude=./.github/ --exclude=./examples/ --exclude=./vendor/ --non-zero-exit-on-violation --hint",
             "php-cs-fixer fix --allow-risky=yes --no-interaction --dry-run -v",
             "psalm --show-info=false"
